--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,24 +1,25 @@
 ---
-layout: base
+
+layout: default
 ---
 
- {%- if site.posts.size > 0 -%}
+{%- if site.posts.size > 0 -%}
 
-    <ul class="post-list">
-      {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-      {%- for post in site.posts -%}
-      <li>
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-        <h3>
-          <a class="post-link" href="{{ post.url | relative_url }}">
-            {{ post.title | escape }}
-          </a>
-        </h3>
+<ul class="post-list">
+    {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+    {%- for post in site.posts -%}
+    <li>
+    <span class="post-meta">{{ post.date | date: date_format }}</span>
+    <h3>
+        <a class="post-link" href="{{ post.url | relative_url }}">
+        {{ post.title | escape }}
+       </a>
+    </h3>
 
-          {{ post.excerpt }}
+        {{ post.excerpt }}
 
-      </li>
-      {%- endfor -%}
-    </ul>
+    </li>
+  {%- endfor -%}
+</ul>
 
-    {%- endif -%}
+{%- endif -%}
