--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
@@ -20,6 +19,7 @@
         </a>
 
         <section id="pages">
+          <a href="{{'/'|relative_url}}">Home</a>&nbsp;
           {% for page in site.pages -%}
           <a href="{{page.url}}">{{page.title | escape}}</a>&nbsp;
           {% endfor -%}
