--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -2,21 +2,32 @@
 layout: default
 ---
 
-{%- if site.posts.size > 0 -%}
-<ul class="post-list">
-    {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-    {%- for post in site.posts -%}
-        {%- unless post.tags contains "Misc" -%}
-        <li>
-            <span class="post-meta">{{ post.date | date: date_format }}</span>
-            <h3>
-                <a class="post-link" href="{{ post.url | relative_url }}">
-                    {{ post.title | escape }}
-                </a>
-            </h3>
-            {{ post.excerpt }}
-        </li>
-        {%- endunless -%}
-    {%- endfor -%}
-</ul>
-{%- endif -%}
+<section class="posts-container">
+  <h2>Latest Updates</h2>
+  
+  {%- if site.posts.size > 0 -%}
+    <ul class="post-list">
+        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+        {%- for post in site.posts -%}
+            {%- unless post.tags contains "Misc" -%}
+            <li class="post-item">
+                <span class="post-meta">{{ post.date | date: date_format }}</span>
+                <h3>
+                    <a class="post-link" href="{{ post.url | relative_url }}">
+                        {{ post.title | escape }}
+                    </a>
+                </h3>
+                {%- if post.excerpt -%}
+                  <div class="post-excerpt">
+                    {{ post.excerpt | strip_html | truncatewords: 30 }}
+                    <a href="{{ post.url | relative_url }}" class="read-more">Read more &rarr;</a>
+                  </div>
+                {%- endif -%}
+            </li>
+            {%- endunless -%}
+        {%- endfor -%}
+    </ul>
+  {%- else -%}
+    <p>No updates found.</p>
+  {%- endif -%}
+</section>
